Fixed minor styling issues.
In particular, with dark theme menus were not styled and transparency pattern
was invisible.

--- a/resources/css/dark.css
+++ b/resources/css/dark.css
@@ -14,6 +14,7 @@ QLabel#Picture {
     color: #999;
     font-size: 13px;
     background-color: black;
+    border-top: 1px outset black;
 }
 
 QLabel#StatusbarInfo {
